# helloqt

./: .gitignore  CMakeLists.txt  qt.code-workspace
avkit/: CMakeLists.txt
avkit/src/: AddFileIllustration.qml  AudioFunc.qml  CustomCheckBox.qml  CustomCheckDelegate.qml  CustomFourStateImage.qml  CustomRadioButton.qml  CustomSlider.qml  MainPage.qml  MyFiles.qml  RadiusRectangle.qml  TimeEdit4.qml  VideoCompressorList.qml  VideoCompressorPage.qml  VideoCompressorParam.qml  VideoConverterList.qml  VideoConverterPage.qml  VideoConverterParam.qml  VideoFunc.qml  VideoMergeList.qml  VideoMergePage.qml  VideoPalyControl.qml  VideoToGifList.qml  VideoToGifPage.qml  VideoToGifParam.qml  VideoWorkList.qml  avkit.qrc  framelesswindow.cpp  framelesswindow.h  main.cpp  main.qml
firstqtandroidonqtcreator/: firstqtandroidonqtcreator.pro  main.cpp
helloqml/: CMakeLists.txt  qt5.natvis.xml
helloqml/src/: helloqml.cpp  helloqml.h  helloqml.qrc  helloqml.ui  main.cpp  main.qml
helloqml/src/about/: aboutui.h  aboutui.ui
helloqml/src/meetqt5/: main.qml
helloqml/src/qmlbook/fluid/: README.md  animationsexample.qml
helloqml/src/qmlbook/meetqt5/: main.qml
helloqml/src/qmlbook/quickstart/: MyAnchorsSquare.qml  MyButton.qml  MyDarkAnchorsSquare.qml  MyGreenSquare.qml  MyRedSquare.qml  MyTLineEditV1.qml  MyTLineEditV2.qml  MyTTextEdit.qml  basicelementsexample.qml  inputelementsexample.qml  layoutItemsexample.qml  propertiesexample.qml  qmlsyntaxexample.qml  transformationexample.qml
helloqml/src/qmlexample/: README.md  home.qml  main.qml
helloqml/src/qmlexample/graphic animation/: AnimationExp.qml  ColorExp.qml  ImageExp.qml  ScaleRotationTransformExp.qml  StateExp.qml  main.qml
helloqml/src/qmlexample/image/: README.md  exp_image.qml
helloqml/src/qmlexample/menu/: main.qml
helloqml/src/qt5programming/: README.md  main.qml
helloqml/src/quickstart/: MyBlueAnchorsSquare.qml  MyBlueSquare.qml  MyBrightSquare.qml  MyClickableImage.qml  MyDarkSquare.qml  MyEmptyAnchorsSquare.qml  MyGreenAnchorsSquare.qml  basicelementsexample.qml  componentsexample.qml  positioningelementsexample.qml  qmlsyntax.qml  scriptingexample.qml  transformationexample.qml
helloqmlmingw/: CMakeLists.txt
helloqmlmingw/src/: helloqmlmingw.cpp  helloqmlmingw.h  helloqmlmingw.ui  main.cpp
helloqt/: CMakeLists.txt  README.md
helloqt/src/: firstui.cpp  helloqt.cpp  helloqt.ui  home.cpp  home.h  home.ui
helloqt/src/about/: aboutui.cpp
helloqt/src/common/: stylemgr.cpp  stylemgr.h
helloqt/src/containers/: dockwidget.h  dockwidget.ui  myqscrollarea.cpp  scrollarea.cpp  stackedwidget.cpp  stackedwidget.h  stackedwidget.ui
helloqt/src/itemviews/: itemviews.cpp  itemviews.ui
helloqt/src/layouts/: customflowlayout.ui  customflowlayoutitem.h  customflowlayoutitem.ui  layouts.ui  qflowlayout.cpp  splitter.h  splitter.ui
helloqt/src/properties/: sizetest.cpp  sizetest.ui
helloqt/src/resources/qss/custom/: customflowlayout.qss  dockwidget.qss  scrollarea3.qss  splitter.qss
helloqt6/: CMakeLists-default.txt  CMakeLists-fast-compile.txt  CMakeLists.txt  README.md  helloqt6.qrc
helloqt6/js/: Helper.js
helloqt6/qml/: ComponentPage.qml  MainPage.qml  PracticePage.qml  UIimitate.qml  main.qml
helloqt6/qml/custom/: CustomButton.qml  CustomComboBox.qml  CustomDashedBox.qml  CustomHScrollIndicator.qml  CustomTextField.qml  CustomVScrollIndicator.qml
helloqt6/src/: main.cpp  test.cpp  test.h
helloqtforandroid/: CMakeLists.txt  main.cpp  main.qml
qmlelement/: CMakeLists.txt
qmlelement/src/: QeBaseColor.qml  QeSlider.qml
src/: firstui.h  firstui.ui  helloqt.cpp  helloqt.h  helloqt.qrc  helloqt.ui  home.cpp  home.h  home.ui  main.cpp  myqwidget.cpp  myqwidget.h
src/Layout/: customflowlayout.cpp  customflowlayout.h  customflowlayout.ui
src/common/: stylemgr.cpp  stylemgr.h
src/containers/: dockwidget.cpp  dockwidget.h  dockwidget.ui  myqscrollarea.h  scrollarea.cpp  scrollarea.h  scrollarea.ui  stackedwidget.cpp  stackedwidget.ui
src/itemviews/: itemviews.h  itemviews.ui
src/layouts/: customflowlayout.cpp  customflowlayout.h  customflowlayout.ui  customflowlayoutitem.cpp  customflowlayoutitem.ui  layouts.cpp  layouts.h  layouts.ui  qflowlayout.h  splitter.cpp  splitter.ui
src/properties/: sizetest.h  sizetest.ui
src/resources/qss/: helloqt.qss
src/resources/qss/custom/: dockwidget.qss  home.qss  itemviews.qss  scrollarea1.qss  scrollarea2.qss  scrollarea3.qss  scrollarea4.qss  scrollarea5.qss  stackedwidget.qss
src/resources/qss/global/: helloqt.qss  scrollarea.qss
